# CoopPush

./: .gitignore  MANIFEST.in  README.md  aiversion.py  build.bat  default_push_level.json  dontrun.py  hatch_build.py  pyproject.toml  setup.cfg  setup.py  single_coop_performance.py  test.py  tree.txt
.github/workflows/: python-publish.yml
cpp_include/: aligner.h  coop_push.h  thread_pool.h  vec_backend_env.h  vectorized_environment.h
cpp_src/: aligner.cpp  backend.cpp  bindings.cpp  coop_push.cpp  vec_backend_env.cpp  vectorized_environment.cpp
src/cooppush/: environment.py  vectorized_environment.py
