# pyproject.toml

[build-system]
requires = ["setuptools>=80", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "cooppush"
version = "1.2.1"
authors = [
  { name="Timothy Flavin", email="timothy.c.flavin@gmail.com" },
]
description = "MPE inspired push environment with tunable inter-action dependence for coop MARL"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Timothy-Flavin/CoopPush/"
"Bug Tracker" = "https://github.com/Timothy-Flavin/CoopPush/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.cibuildwheel]
build = "cp3*-*"
skip = ""

[tool.cibuildwheel.windows]
build = "cp3*-win_amd64"