# pyproject.toml

[build-system]
requires = ["setuptools>=80", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "cooppush"
version = "1.2.3"
description = "Cooperative Push environment"
readme = "README.md"
requires-python = ">=3.11"
# SPDX license expression recommended by packaging guides:
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "timothy-flavin" }]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/Timothy-Flavin/CoopPush/"
"Bug Tracker" = "https://github.com/Timothy-Flavin/CoopPush/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.cibuildwheel]
build = "cp3*-*"
skip = ""

[tool.cibuildwheel.windows]
build = "cp3*-win_amd64"